# optee_mjpg

./: CMakeLists.txt  Makefile  README.md
mjpg/: Android.mk  CMakeLists.txt  Makefile
mjpg/host/: Makefile  main.c  sum.c
mjpg/host/input_file/: input_file.c  input_file.h
mjpg/host/input_uvc/: dynctrl.c  input_uvc.c  v4l2uvc.h
mjpg/host/output_file/: output_file.c
mjpg/host/output_http/: httpd.c  output_http.c  output_http.h
mjpg/ta/: Android.mk  Makefile  get_time_ta.c  user_ta_header_defines.h
mjpg/ta/include/: get_time_ta.h
